# xll_androidword

./: build.gradle  settings.gradle
PluginDemo/: build.gradle
PluginDemo/src/main/: AndroidManifest.xml
activitylifecylemoduel/: build.gradle
activitylifecylemoduel/src/main/: AndroidManifest.xml
aidlmoduleclient/: build.gradle
aidlmoduleclient/src/main/: AndroidManifest.xml
aidlmoduleservice/: build.gradle
aidlmoduleservice/src/main/: AndroidManifest.xml
alertdlgleakdemo/: build.gradle
alertdlgleakdemo/src/main/: AndroidManifest.xml
animationmodule/: build.gradle
animationmodule/src/main/: AndroidManifest.xml
animatortest/: build.gradle
animatortest/src/main/: AndroidManifest.xml
app/: build.gradle
app/src/main/: AndroidManifest.xml
applicationtestmodule/: build.gradle
applicationtestmodule/src/main/: AndroidManifest.xml
buildermodelmodule/: build.gradle
buildermodelmodule/src/main/: AndroidManifest.xml
butterknifemodule/: build.gradle
butterknifemodule/src/main/: AndroidManifest.xml
fragmentmodule/: build.gradle
fragmentmodule/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
greendaotestmodule/: build.gradle
greendaotestmodule/src/main/: AndroidManifest.xml
hookmodule/: build.gradle
hookmodule/src/main/: AndroidManifest.xml
internationmodule/: build.gradle
internationmodule/src/main/: AndroidManifest.xml
ipcmodule/: build.gradle
ipcmodule/src/main/: AndroidManifest.xml
keepservicemodule/: build.gradle
keepservicemodule/src/main/: AndroidManifest.xml
lifecylcedemo/: build.gradle
mediatorpatternmodule/: build.gradle
mvvmmodule/: build.gradle  说明
mypluginlibrary/: build.gradle
navigationmodule/: build.gradle
ndkmodule/: build.gradle
ndkmodule/src/main/cpp/: CMakeLists.txt  Utils.cpp  Utils.h  native-lib.cpp
processmodule/: build.gradle
recyclerviewdemo/: build.gradle  module说明
rxjavamodule/: build.gradle
servicemodule/: build.gradle
splashdemo/: build.gradle
statemachinemodule/: build.gradle
stubviewmodule/: build.gradle
testmodule/: build.gradle
toucheventdemo/: build.gradle
viewmodelmodule/: build.gradle
viewusemodule/: build.gradle
(+304 files in other folders)
